--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -1,18 +1,20 @@
 <!DOCTYPE html>
 <html>
-  <head>
-      <link rel="stylesheet" href="/stylesheets/normalize.css">
-      <link rel="stylesheet" href="/stylesheets/application.css">
 
-      {{!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> --}}
-      <script src="/js/application.js"></script>
+<head>
+    <link rel="stylesheet" href="/stylesheets/normalize.css">
+    <link rel="stylesheet" href="/stylesheets/application.css">
 
-      <title>Зеленые рецепты</title>
-  </head>
-  <body>
-      <header role="banner" class="mar-t-5 pad-t-2 pad-b-4 pad-s-1 wrap-float bg-white">
-          <div class="max-w-700 center wrap-float">
-              <nav class="clearfix mar-b-1">
+    {{!-- <script src="//ajax.googleapis.com/ajax/libs/jquery/1.9.1/jquery.min.js"></script> --}}
+    <script src="/js/application.js"></script>
+
+    <title>Зеленые рецепты</title>
+</head>
+
+<body>
+    <header role="banner" class="mar-t-5 pad-t-2 pad-b-4 pad-s-1 wrap-float bg-white">
+        <div class="max-w-700 center wrap-float">
+            {{!-- <nav class="clearfix mar-b-1">
                   <ul class="no-bullets no-margin no-padding right">
                       {{#if userID}}
                       <li class="pipe-separate t-light-green left"><a href="/users/{{userID}}">{{username}}</a></li>
@@ -23,18 +25,24 @@
                       {{/if}}
                       <li class="pipe-separate t-light-green left"><a href="/">Главная</a></li>
                   </ul>
-              </nav>
+              </nav> --}}
+            <nav class="clearfix mar-b-1">
+                <ul class="no-bullets no-margin no-padding right">
+                <li class="pipe-separate t-light-green left"><a href="/">Главная</a></li>
+                </ul>
+            </nav>
 
-              <div class="logo-container">
-                  {{!-- <img class="logo" src="/images/logo.png" class="center block"> --}}
-                  <h1>Зеленые рецепты</h1>
-              </div>
-          </div>
-      </header>
-      <div class="bg-dk-green pad-t-2 pad-s-1 pad-b-8 mar-b-16 c-white">
-          <div class="max-w-700 center">
+            <div class="logo-container">
+                {{!-- <img class="logo" src="/images/logo.png" class="center block"> --}}
+                <h1>Зеленые рецепты</h1>
+            </div>
+        </div>
+    </header>
+    <div class="bg-dk-green pad-t-2 pad-s-1 pad-b-8 mar-b-16 c-white">
+        <div class="max-w-700 center">
             {{{body}}}
-          </div>
-      </div>
-  </body>
+        </div>
+    </div>
+</body>
+
 </html>
