--- a/views/layout.hbs
+++ b/views/layout.hbs
@@ -14,7 +14,7 @@
 <body>
     <header role="banner" class="mar-t-5 pad-t-2 pad-b-4 pad-s-1 wrap-float bg-white">
         <div class="max-w-700 center wrap-float">
-            {{!-- <nav class="clearfix mar-b-1">
+            <nav class="clearfix mar-b-1">
                   <ul class="no-bullets no-margin no-padding right">
                       {{#if userID}}
                       <li class="pipe-separate t-light-green left"><a href="/users/{{userID}}">{{username}}</a></li>
@@ -25,7 +25,7 @@
                       {{/if}}
                       <li class="pipe-separate t-light-green left"><a href="/">Главная</a></li>
                   </ul>
-              </nav> --}}
+              </nav>
             <nav class="clearfix mar-b-1">
                 <ul class="no-bullets no-margin no-padding right">
                 <li class="pipe-separate t-light-green left"><a href="/">Главная</a></li>
